--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,13 @@
 body {
-    background-color: lightgray;
+    background-color: #f2f2f2;
+}
+
+.footer {
+    position:absolute;
+    bottom:0;
+    width: 100%
+}
+
+email {
+    background-image: url("/assets/images/email.png");
 }
