--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -20,8 +20,8 @@
                     <!--Grid column-->
                     <div class="col-md-6">
                         <div class="md-form mb-0">
-                            <input type="text" id="name" name="name" class="form-control">
-                            <label for="name" class="">Your name</label>
+                            <input type="text" id="name" name="name" placeholder="Name" class="form-control">
+                            <small class="form-text text-muted">Your Name.</small>
                         </div>
                     </div>
                     <!--Grid column-->
@@ -29,8 +29,8 @@
                     <!--Grid column-->
                     <div class="col-md-6">
                         <div class="md-form mb-0">
-                            <input type="text" id="email" name="email" class="form-control">
-                            <label for="email" class="">Your email</label>
+                            <input type="text" id="email" name="email" placeholder="Email Address" class="form-control">
+                            <small class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
                     </div>
                     <!--Grid column-->
@@ -42,8 +42,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="md-form mb-0">
-                            <input type="text" id="subject" name="subject" class="form-control">
-                            <label for="subject" class="">Subject</label>
+                            <input type="text" id="subject" name="subject" placeholder="Subject" class="form-control">
+                            <small class="form-text text-muted">Subject of enquiry</small>
                         </div>
                     </div>
                 </div>
@@ -56,8 +56,8 @@
                     <div class="col-md-12">
 
                         <div class="md-form">
-                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                            <label for="message">Your message</label>
+                            <textarea type="text" id="message" name="message" placeholder="message" rows="2" class="form-control md-textarea"></textarea>
+                            <small class="form-text text-muted">Your Message</small>
                         </div>
 
                     </div>
@@ -76,15 +76,18 @@
         <!--Grid column-->
         <div class="col-md-3 text-center">
             <ul class="list-unstyled mb-0">
-                    <img src="assets/images/email.png" />
+                <li>
+                    <img src="/assets/images/email.png" />
                     <p>San Francisco, CA 94126, USA</p>
                 </li>
 
-                <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                <li>
+                    <img alt="" src="./assets/images/phone.png" />
                     <p>+ 01 234 567 89</p>
                 </li>
 
-                <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                <li>
+                    <div class="email"></div>
                     <p>contact@mdbootstrap.com</p>
                 </li>
             </ul>
