adds google maps to contact page and alters stying

--- a/templates/Pages/home.html.twig
+++ b/templates/Pages/home.html.twig
@@ -6,7 +6,7 @@
         <!-- Heading Row -->
         <div class="row align-items-center my-5">
             <div class="col-lg-7">
-                <img class="img-fluid rounded mb-4 mb-lg-0" src="http://placehold.it/900x400" alt="">
+                <img class="img-fluid rounded mb-4 mb-lg-0" src="https://media-cdn.tripadvisor.com/media/photo-s/0d/92/1a/cb/the-cluricaune-irish.jpg" alt="">
             </div>
             <!-- /.col-lg-8 -->
             <div class="col-lg-5">
@@ -30,11 +30,11 @@
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
                     <div class="card-body">
-                        <h2 class="card-title">Find Our Pubs</h2>
+                        <h2 class="card-title">Our Pubs</h2>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary btn-sm">Our Pubs</a>
+                        <a href="#" class="btn btn-primary btn-sm">Find a pub near you</a>
                     </div>
                 </div>
             </div>
@@ -46,7 +46,7 @@
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary btn-sm">Meet The Team</a>
+                        <a href="/our-team" class="btn btn-primary btn-sm">Meet the team</a>
                     </div>
                 </div>
             </div>
@@ -54,17 +54,17 @@
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
                     <div class="card-body">
-                        <h2 class="card-title">Find A Job Near You</h2>
+                        <h2 class="card-title">Jobs</h2>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary btn-sm">Reviews</a>
+                        <a href="#" class="btn btn-primary btn-sm">Find a job near you</a>
                     </div>
                 </div>
             </div>
         </div>
         <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-        <div class="elfsight-app-f3120b66-18fb-472d-a889-5fd8159f846d"></div>
+        <div class="elfsight-app-f3120b66-18fb-472d-a889-5fd8159f846d mb-5" id="instagram"></div>
     </div>
 
     <script src="vendor/jquery/jquery.min.js"></script>
