--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,9 +15,11 @@
 {% block navigation %}
     {% include 'navigation.html.twig' %}
 {% endblock %}
-{% block content %}{% endblock %}
+{% block content %}
+{% endblock %}
 {% block footer %}
     {% include 'footer.html.twig' %}
 {% endblock %}
+
 </body>
 </html>
