--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,6 +1,17 @@
-{#<footer class="py-5 bg-dark footer">#}
-{#    <div class="container">#}
-{#        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>#}
-{#    </div>#}
-{#    <!-- /.container -->#}
-{#</footer>#}
+<footer class="py-5 footer" id="footer">
+    <div class="container">
+        <p class="m-0 text-center text-black pb-2">Copyright &copy; CLO Pubs LTD 2020</p>
+
+        <div class="row text-center">
+            <div class="col-4">
+                <a href="https://www.facebook.com/bootsnipp"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+            </div>
+            <div class="col-4">
+                <a href="https://twitter.com/bootsnipp"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
+            </div>
+            <div class="col-4">
+                <a href="https://plus.google.com/+Bootsnipp-page"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
+            </div>
+        </div>
+    </div>
+</footer>
