--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -2,100 +2,114 @@
 
 {% block content %}
     <div class="container">
-<section class="mb-4">
-    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
-    <!--Section description-->
-    <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
-        a matter of hours to help you.</p>
+        <section class="mb-4">
+            <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+            <!--Section description-->
+            <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to
+                contact us directly. Our team will come back to you within
+                a matter of hours to help you.</p>
 
-    <div class="row">
+            <div class="row">
 
-        <!--Grid column-->
-        <div class="col-md-9 mb-md-0 mb-5">
-            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+                <!--Grid column-->
+                <div class="col-md-9 mb-md-0 mb-5">
+                    <form id="contact-form" name="contact-form" action="mail.php" method="POST">
 
-                <!--Grid row-->
-                <div class="row">
+                        <!--Grid row-->
+                        <div class="row">
 
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <input type="text" id="name" name="name" placeholder="Name" class="form-control">
-                            <small class="form-text text-muted">Your Name.</small>
+                            <!--Grid column-->
+                            <div class="col-md-6">
+                                <div class="md-form mb-2">
+                                    <input type="text" id="name" name="name" placeholder="Name" class="form-control">
+                                    <small class="form-text text-muted">Your Name.</small>
+                                </div>
+                            </div>
+                            <!--Grid column-->
+
+                            <!--Grid column-->
+                            <div class="col-md-6">
+                                <div class="md-form mb-2">
+                                    <input type="text" id="email" name="email" placeholder="Email Address"
+                                           class="form-control">
+                                    <small class="form-text text-muted">We'll never share your email with anyone
+                                        else.</small>
+                                </div>
+                            </div>
+                            <!--Grid column-->
+
                         </div>
-                    </div>
-                    <!--Grid column-->
+                        <!--Grid row-->
 
-                    <!--Grid column-->
-                    <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <input type="text" id="email" name="email" placeholder="Email Address" class="form-control">
-                            <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        <!--Grid row-->
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="md-form mb-2">
+                                    <input type="text" id="subject" name="subject" placeholder="Subject"
+                                           class="form-control">
+                                    <small class="form-text text-muted">Subject of enquiry</small>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                    <!--Grid column-->
+                        <!--Grid row-->
 
+                        <!--Grid row-->
+                        <div class="row">
+
+                            <!--Grid column-->
+                            <div class="col-md-12">
+
+                                <div class="md-form pb-2">
+                                    <textarea type="text" id="message" name="message" placeholder="message" rows="2"
+                                              class="form-control md-textarea"></textarea>
+                                    <small class="form-text text-muted">Your Message</small>
+                                </div>
+
+                            </div>
+                        </div>
+                        <!--Grid row-->
+
+                    </form>
+
+                    <div class="text-center text-md-left pb-4">
+                        <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+                    </div>
+                    <div class="status"></div>
+                    <div class="google-maps pt-2">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d521.162915616868!2d-1.2461701024549878!3d53.13191019379084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd0cd2dfbb2d8672b!2sCommunity%20Pubs%20Ltd!5e0!3m2!1sen!2suk!4v1596193492523!5m2!1sen!2suk"
+                                width="100%" height="550" frameborder="0" style="border:0;" allowfullscreen=""
+                                aria-hidden="false" tabindex="0"></iframe>
+                    </div>
                 </div>
-                <!--Grid row-->
+                <!--Grid column-->
 
-                <!--Grid row-->
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="md-form mb-0">
-                            <input type="text" id="subject" name="subject" placeholder="Subject" class="form-control">
-                            <small class="form-text text-muted">Subject of enquiry</small>
-                        </div>
-                    </div>
+                <!--Grid column-->
+                <div class="col-md-3">
+                    <ul class="list-unstyled mb-0">
+                        <li>
+                            <h5>Office Address</h5>
+                            <p>San Francisco, CA 94126, USA</p>
+                        </li>
+                        <li>
+                            <h5>Office Hours</h5>
+                            <p class="m-0">Weekdays: 9am - 4pm</p>
+                            <p>Weekends: Closed</p>
+                        </li>
+
+                        <li>
+                            <h5>Contact Number</h5>
+                            <p>+ 01 234 567 89</p>
+                        </li>
+
+                        <li>
+                            <h5>Email</h5>
+                            <p>contact@mdbootstrap.com</p>
+                        </li>
+                    </ul>
                 </div>
-                <!--Grid row-->
+                <!--Grid column-->
 
-                <!--Grid row-->
-                <div class="row">
-
-                    <!--Grid column-->
-                    <div class="col-md-12">
-
-                        <div class="md-form">
-                            <textarea type="text" id="message" name="message" placeholder="message" rows="2" class="form-control md-textarea"></textarea>
-                            <small class="form-text text-muted">Your Message</small>
-                        </div>
-
-                    </div>
-                </div>
-                <!--Grid row-->
-
-            </form>
-
-            <div class="text-center text-md-left">
-                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
             </div>
-            <div class="status"></div>
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <div class="col-md-3 text-center">
-            <ul class="list-unstyled mb-0">
-                <li>
-                    <img src="/assets/images/email.png" />
-                    <p>San Francisco, CA 94126, USA</p>
-                </li>
-
-                <li>
-                    <img alt="" src="./assets/images/phone.png" />
-                    <p>+ 01 234 567 89</p>
-                </li>
-
-                <li>
-                    <div class="email"></div>
-                    <p>contact@mdbootstrap.com</p>
-                </li>
-            </ul>
-        </div>
-        <!--Grid column-->
-
-    </div>
-
-</section>
+        </section>
     </div>
 {% endblock %}
