--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+<nav class="navbar navbar-expand-lg navbar-dark static-top nav">
     <div class="container">
         <a class="navbar-brand" href="#">
 {#            <img src="http://placehold.it/150x50?text=Logo" alt="">#}
@@ -10,12 +10,12 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
+                    <a class="nav-link" href="{{ path('home') }}">Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Our Team</a>
+                    <a class="nav-link" href="{{ path('team') }}">Our Team</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Our Pubs</a>
