--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -22,7 +22,7 @@ body {
     height: 100%;
 }
 
-/* FontAwesome for working BootSnippet :> */
+/* Contact us form */
 
 #team {
     background: #eee !important;
@@ -149,4 +149,8 @@ section .section-title {
     width: 120px;
     height: 120px;
     border-radius: 50%;
+}
+
+.star-bg {
+    color: #68A59F;
 }
