--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -22,7 +22,7 @@
                             <div class="col-md-6">
                                 <div class="md-form mb-2">
                                     <input type="text" id="name" name="name" placeholder="Name" class="form-control">
-                                    <small class="form-text text-muted">Your Name.</small>
+                                    <small class="form-text text-muted">Your name</small>
                                 </div>
                             </div>
                             <!--Grid column-->
@@ -60,9 +60,9 @@
                             <div class="col-md-12">
 
                                 <div class="md-form pb-2">
-                                    <textarea type="text" id="message" name="message" placeholder="message" rows="2"
+                                    <textarea type="text" id="message" name="message" placeholder="Message" rows="5"
                                               class="form-control md-textarea"></textarea>
-                                    <small class="form-text text-muted">Your Message</small>
+                                    <small class="form-text text-muted">Your message</small>
                                 </div>
 
                             </div>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="status"></div>
                     <div class="google-maps pt-2">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d521.162915616868!2d-1.2461701024549878!3d53.13191019379084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd0cd2dfbb2d8672b!2sCommunity%20Pubs%20Ltd!5e0!3m2!1sen!2suk!4v1596193492523!5m2!1sen!2suk"
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d521.162915616868!2d-1.2461701024549878!3d53.13191019379084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd0cd2dfbb2d8672b!2sCommunity%20Pubs%20Ltd!5e0!3m2!1sen!2suk!4v1596193492523!5m2!1sen!2suk&z=2"
                                 width="100%" height="550" frameborder="0" style="border:0;" allowfullscreen=""
                                 aria-hidden="false" tabindex="0"></iframe>
                     </div>
@@ -87,22 +87,63 @@
                 <div class="col-md-3">
                     <ul class="list-unstyled mb-0">
                         <li>
-                            <h5>Office Address</h5>
+                            <div class="row">
+                                <div class="column pr-3 pl-3">
+                                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-house-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M8 3.293l6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+                                        <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+                                    </svg>
+                                </div>
+                                <div class="column">
+                                    <h5>Office Address</h5>
+                                </div>
+                            </div>
                             <p>San Francisco, CA 94126, USA</p>
                         </li>
                         <li>
-                            <h5>Office Hours</h5>
-                            <p class="m-0">Weekdays: 9am - 4pm</p>
+                            <div class="row">
+                                <div class="column pr-3 pl-3">
+                                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-calendar-day-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M4 .5a.5.5 0 0 0-1 0V1H2a2 2 0 0 0-2 2v1h16V3a2 2 0 0 0-2-2h-1V.5a.5.5 0 0 0-1 0V1H4V.5zM0 5h16v9a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V5zm11.215 2.855a.425.425 0 0 1-.43-.425c0-.242.192-.43.43-.43a.428.428 0 1 1 0 .855zm.336.563v4.105h-.672V8.418h.672zm-6.867 4.105v-2.3h2.261v-.61H4.684V7.801h2.464v-.61H4v5.332h.684zm3.296 0h.676V9.98c0-.554.227-1.007.953-1.007.125 0 .258.004.329.015v-.613a1.806 1.806 0 0 0-.254-.02c-.582 0-.891.32-1.012.567h-.02v-.504H7.98v4.105z"/>
+                                    </svg>
+                                </div>
+                                <div class="column">
+                                    <h5>Office Hours</h5>
+                                </div>
+                            </div>
+                            <p class="m-0">Monday: 9am - 4pm</p>
+                            <p class="m-0">Tuesday: 9am - 4pm</p>
+                            <p class="m-0">Wednesday: 9am - 4pm</p>
+                            <p class="m-0">Thursday: 9am - 4pm</p>
+                            <p class="mb-1">Friday: 9am - 4pm</p>
                             <p>Weekends: Closed</p>
                         </li>
 
                         <li>
-                            <h5>Contact Number</h5>
+                            <div class="row">
+                                <div class="column pr-3 pl-3">
+                                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z"/>
+                                    </svg>
+                                </div>
+                                <div class="column">
+                                    <h5>Office Number</h5>
+                                </div>
+                            </div>
                             <p>+ 01 234 567 89</p>
                         </li>
 
                         <li>
-                            <h5>Email</h5>
+                            <div class="row">
+                                <div class="column pr-3 pl-3">
+                                    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-envelope-open-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M8.941.435a2 2 0 0 0-1.882 0l-6 3.2A2 2 0 0 0 0 5.4v.313l6.709 3.933L8 8.928l1.291.717L16 5.715V5.4a2 2 0 0 0-1.059-1.765l-6-3.2zM16 6.873l-5.693 3.337L16 13.372v-6.5zm-.059 7.611L8 10.072.059 14.484A2 2 0 0 0 2 16h12a2 2 0 0 0 1.941-1.516zM0 13.373l5.693-3.163L0 6.873v6.5z"/>
+                                    </svg>
+                                </div>
+                                <div class="column">
+                                    <h5>Office Email</h5>
+                                </div>
+                            </div>
                             <p>contact@mdbootstrap.com</p>
                         </li>
                     </ul>
