--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -18,7 +18,7 @@
                     <a class="nav-link" href="{{ path('team') }}">Our Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Our Pubs</a>
+                    <a class="nav-link" href="{{ path('pubs') }}">Our Pubs</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('contact') }}">Contact</a>
