--- a/templates/Pages/pubs.html.twig
+++ b/templates/Pages/pubs.html.twig
@@ -19,7 +19,7 @@
                         <!-- Custom content-->
                         <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                             <div class="media-body order-2 order-lg-1">
-                                <h5 class="mt-0 font-weight-bold mb-2">The Rifle</h5>
+                                <h5 class="mt-0 font-weight-bold mb-2 pt-3">The Rifle</h5>
                                 <p class="font-italic text-muted mb-0 small">Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit. Suscipit fuga autem maiores necessitatibus. adipisicing elit.
                                     Suscipit fuga autem maiores necessitatibus</p>
@@ -47,7 +47,7 @@
                         <!-- Custom content-->
                         <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                             <div class="media-body order-2 order-lg-1">
-                                <h5 class="mt-0 font-weight-bold mb-2">The Maypole</h5>
+                                <h5 class="mt-0 font-weight-bold mb-2 pt-3">The Maypole</h5>
                                 <p class="font-italic text-muted mb-0 small">Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit. Suscipit fuga autem maiores necessitatibus.</p>
                                 <div class="d-flex align-items-center justify-content-between mt-1">
@@ -74,7 +74,7 @@
                         <!-- Custom content-->
                         <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                             <div class="media-body order-2 order-lg-1">
-                                <h5 class="mt-0 font-weight-bold mb-2">The Fox and Crown</h5>
+                                <h5 class="mt-0 font-weight-bold mb-2 pt-3">The Fox and Crown</h5>
                                 <p class="font-italic text-muted mb-0 small">Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit. Suscipit fuga autem maiores necessitatibus.</p>
                                 <div class="d-flex align-items-center justify-content-between mt-1">
@@ -101,7 +101,7 @@
                         <!-- Custom content-->
                         <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                             <div class="media-body order-2 order-lg-1">
-                                <h5 class="mt-0 font-weight-bold mb-2">The Tavern</h5>
+                                <h5 class="mt-0 font-weight-bold mb-2 pt-3">The Tavern</h5>
                                 <p class="font-italic text-muted mb-0 small">Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit. Suscipit fuga autem maiores necessitatibus.</p>
                                 <div class="d-flex align-items-center justify-content-between mt-1">
@@ -125,7 +125,7 @@
                         <!-- Custom content-->
                         <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                             <div class="media-body order-2 order-lg-1">
-                                <h5 class="mt-0 font-weight-bold mb-2">The Hut</h5>
+                                <h5 class="mt-0 font-weight-bold mb-2 pt-3">The Hut</h5>
                                 <p class="font-italic text-muted mb-0 small">Lorem ipsum dolor sit amet, consectetur
                                     adipisicing elit. Suscipit fuga autem maiores necessitatibus.</p>
                                 <div class="d-flex align-items-center justify-content-between mt-1">
