--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -21,6 +21,9 @@
                     <a class="nav-link" href="{{ path('pubs') }}">Our Pubs</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ path('jobs') }}">Jobs</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ path('contact') }}">Contact</a>
                 </li>
             </ul>
