--- a/templates/Pages/jobs.html.twig
+++ b/templates/Pages/jobs.html.twig
@@ -3,13 +3,103 @@
 {% block content %}
     <div class="container py-5">
         <div class="team-header text-center">
-            <h2 class="h1-responsive font-weight-bold text-center my-4">Our Pubs</h2>
+            <h2 class="h1-responsive font-weight-bold text-center my-4">Jobs</h2>
             <p class="mb-5">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
                 and scrambled it to make a type specimen book. It has survived not only five centuries</p>
         </div>
-        <div class="jobs">
-            
+        <div class="col-lg-10 mx-auto">
+
+            <!-- List group-->
+            <ul class="list-group">
+
+                <!-- list group item-->
+                <li class="list-group-item mb-5 shadow">
+                    <!-- Custom content-->
+                    <div class="media align-items-lg-center flex-column flex-lg-row p-3">
+                        <div class="media-body order-2 order-lg-1">
+                            <h4 class="mt-0 font-weight-bold mb-2 pt-3">General Manager</h4>
+                            <h5 class="mt-0 font-weight-bold mb-2 pt-3">The Rifle - Sutton In Ashfield</h5>
+                            <p class="font-italic text-muted mb-0 small">Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Suscipit fuga autem maiores necessitatibus. adipisicing elit.
+                                Suscipit fuga autem maiores necessitatibus</p>
+                            <h6 class="mt-0 font-weight-bold pt-3">£30,000 - £35,000</h6>
+                            <h5 class="pt-3">Expectations</h5>
+                            <ul>
+                                <li>Care about finding, growing and engaging your team.</li>
+                                <li>Be accountable for running all aspects of your pub.</li>
+                                <li>Celebrate and create a buzz by sharing enjoyable experiences.</li>
+                            </ul>
+                            <h5 class="pt-3">Experience</h5>
+                            <ul>
+                                <li>2+ years in any management sector</li>
+                                <li>Basic computer skills</li>
+                                <li>Stock management skills</li>
+                            </ul>
+                            <a href="#" class="btn btn-primary mt-4">Apply now</a>
+                        </div>
+                    </div>
+                    <!-- End -->
+                </li>
+                <li class="list-group-item mb-5 shadow">
+                    <!-- Custom content-->
+                    <div class="media align-items-lg-center flex-column flex-lg-row p-3">
+                        <div class="media-body order-2 order-lg-1">
+                            <h4 class="mt-0 font-weight-bold mb-2 pt-3">General Manager</h4>
+                            <h5 class="mt-0 font-weight-bold mb-2 pt-3">The Tavern - Sutton In Ashfield</h5>
+                            <p class="font-italic text-muted mb-0 small">Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Suscipit fuga autem maiores necessitatibus. adipisicing elit.
+                                Suscipit fuga autem maiores necessitatibus</p>
+                            <h6 class="mt-0 font-weight-bold pt-3">£34,000 - £35,000</h6>
+                            <h5 class="pt-3">Expectations</h5>
+                            <ul>
+                                <li>Care about finding, growing and engaging your team.</li>
+                                <li>Be accountable for running all aspects of your pub.</li>
+                                <li>Celebrate and create a buzz by sharing enjoyable experiences.</li>
+                            </ul>
+                            <h5 class="pt-3">Experience</h5>
+                            <ul>
+                                <li>2+ years in any management sector</li>
+                                <li>Basic computer skills</li>
+                                <li>Stock management skills</li>
+                            </ul>
+                            <a href="#" class="btn btn-primary mt-4">Apply now</a>
+                        </div>
+                    </div>
+                    <!-- End -->
+                </li>
+                <li class="list-group-item mb-5 shadow">
+                    <!-- Custom content-->
+                    <div class="media align-items-lg-center flex-column flex-lg-row p-3">
+                        <div class="media-body order-2 order-lg-1">
+                            <h4 class="mt-0 font-weight-bold mb-2 pt-3">General Manager</h4>
+                            <h5 class="mt-0 font-weight-bold mb-2 pt-3">The Swan - Mansfield</h5>
+                            <p class="font-italic text-muted mb-0 small">Lorem ipsum dolor sit amet, consectetur
+                                adipisicing elit. Suscipit fuga autem maiores necessitatibus. adipisicing elit.
+                                Suscipit fuga autem maiores necessitatibus</p>
+                            <h6 class="mt-0 font-weight-bold pt-3">£32,000 - £37,000</h6>
+                            <h5 class="pt-3">Expectations</h5>
+                            <ul>
+                                <li>Care about finding, growing and engaging your team.</li>
+                                <li>Be accountable for running all aspects of your pub.</li>
+                                <li>Celebrate and create a buzz by sharing enjoyable experiences.</li>
+                            </ul>
+                            <h5 class="pt-3">Experience</h5>
+                            <ul>
+                                <li>2+ years in any management sector</li>
+                                <li>Basic computer skills</li>
+                                <li>Stock management skills</li>
+                            </ul>
+                            <a href="#" class="btn btn-primary mt-4">Apply now</a>
+                        </div>
+                    </div>
+                    <!-- End -->
+                </li>
+                <!-- End -->
+
+                <!-- list group item-->
+            </ul>
+            <!-- End -->
         </div>
     </div>
 
