--- a/templates/Pages/pubs.html.twig
+++ b/templates/Pages/pubs.html.twig
@@ -12,10 +12,10 @@
             <div class="col-lg-10 mx-auto">
 
                 <!-- List group-->
-                <ul class="list-group shadow">
+                <ul class="list-group">
 
                     <!-- list group item-->
-                    <li class="list-group-item">
+                    <li class="list-group-item mb-2 shadow">
                         <!-- Custom content-->
                         <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                             <div class="media-body order-2 order-lg-1">
@@ -43,7 +43,7 @@
                     <!-- End -->
 
                     <!-- list group item-->
-                    <li class="list-group-item">
+                    <li class="list-group-item mb-2 shadow">
                         <!-- Custom content-->
                         <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                             <div class="media-body order-2 order-lg-1">
@@ -70,7 +70,7 @@
                     <!-- End -->
 
                     <!-- list group item -->
-                    <li class="list-group-item">
+                    <li class="list-group-item mb-2 shadow">
                         <!-- Custom content-->
                         <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                             <div class="media-body order-2 order-lg-1">
@@ -97,7 +97,7 @@
                     <!-- End -->
 
                     <!-- list group item -->
-                    <li class="list-group-item">
+                    <li class="list-group-item mb-2 shadow">
                         <!-- Custom content-->
                         <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                             <div class="media-body order-2 order-lg-1">
@@ -121,7 +121,7 @@
                         </div>
                         <!-- End -->
                     </li>
-                    <li class="list-group-item">
+                    <li class="list-group-item mb-2 shadow">
                         <!-- Custom content-->
                         <div class="media align-items-lg-center flex-column flex-lg-row p-3">
                             <div class="media-body order-2 order-lg-1">
