creates apply form and adds drink aware to footer

--- a/templates/Pages/jobs.html.twig
+++ b/templates/Pages/jobs.html.twig
@@ -36,7 +36,7 @@
                                 <li>Basic computer skills</li>
                                 <li>Stock management skills</li>
                             </ul>
-                            <a href="#" class="btn btn-primary mt-4">Apply now</a>
+                            <a href="/job/1/apply" class="btn btn-primary mt-4">Apply now</a>
                         </div>
                     </div>
                     <!-- End -->
@@ -63,7 +63,7 @@
                                 <li>Basic computer skills</li>
                                 <li>Stock management skills</li>
                             </ul>
-                            <a href="#" class="btn btn-primary mt-4">Apply now</a>
+                            <a href="/job/1/apply" class="btn btn-primary mt-4">Apply now</a>
                         </div>
                     </div>
                     <!-- End -->
@@ -90,7 +90,7 @@
                                 <li>Basic computer skills</li>
                                 <li>Stock management skills</li>
                             </ul>
-                            <a href="#" class="btn btn-primary mt-4">Apply now</a>
+                            <a href="/job/1/apply" class="btn btn-primary mt-4">Apply now</a>
                         </div>
                     </div>
                     <!-- End -->
