--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,7 +1,6 @@
-<footer class="py-5 footer" id="footer">
+<footer class="pt-5 pb-5 footer" id="footer">
     <div class="container">
-        <p class="m-0 text-center text-black pb-2">Copyright &copy; CLO Pubs LTD 2020</p>
-
+        <p class="m-0 text-center small mb-3">Copyright &copy; CLO Pubs LTD 2020</p>
         <div class="row text-center">
             <div class="col-4">
                 <a href="https://www.facebook.com/bootsnipp"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
@@ -14,4 +13,5 @@
             </div>
         </div>
     </div>
+    <p class="small text-center mt-4">Always drink responsibly, for drinking advice please visit  <a target="_blank" href="https://www.drinkaware.co.uk/">Drink Aware</a></p>
 </footer>
