adds pubs admin page

--- a/templates/Admin/admin_pubs.html.twig
+++ b/templates/Admin/admin_pubs.html.twig
@@ -4,7 +4,7 @@
         <div id="layoutSidenav_content">
             <main>
                 <div class="container-fluid">
-                    <h1 class="mt-4">Team Members</h1>
+                    <h1 class="mt-4">Pubs</h1>
                     <ol class="breadcrumb mb-4">
                         <li class="breadcrumb-item active">Dashboard</li>
                     </ol>
@@ -13,7 +13,7 @@
                             <div class="card mb-4">
                                 <div class="card-header">
                                     <i class="fas fa-chart-bar mr-1"></i>
-                                    Add New Member
+                                    Add New Pub
                                 </div>
                                 <div class="card-body">
                                     <form>
@@ -22,14 +22,18 @@
                                             <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
                                         </div>
                                         <div class="form-group">
-                                            <label for="formGroupExampleInput2">Position</label>
-                                            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Position">
+                                            <label for="formGroupExampleInput2">Town</label>
+                                            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Town">
                                         </div>
                                         <div class="form-group">
-                                            <label for="exampleFormControlTextarea1">Bio</label>
+                                            <label for="formGroupExampleInput2">Postcode</label>
+                                            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Postcode">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="exampleFormControlTextarea1">Description</label>
                                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Description of person / position"></textarea>
                                         </div>
-                                        <button type="submit" class="btn btn-primary mb-2">Add Member</button>
+                                        <button type="submit" class="btn btn-primary mb-2">Add Pub</button>
                                     </form>
                                 </div>
                             </div>
@@ -39,7 +43,7 @@
                             <div class="card mb-4">
                                 <div class="card-header">
                                     <i class="fas fa-chart-area mr-1"></i>
-                                    Existing Team Members
+                                    Existing Pubs
                                 </div>
                                 <div class="card-body">
                                     <div class="card-body">
@@ -48,42 +52,28 @@
                                                 <thead class="titles-header">
                                                 <tr>
                                                     <th>Name</th>
-                                                    <th>Position</th>
+                                                    <th>Town</th>
                                                     <th></th>
                                                 </tr>
                                                 </thead>
                                                 <tbody>
                                                 <tr>
-                                                    <td>Tiger Nixon</td>
-                                                    <td>System Architect</td>
+                                                    <td>The Rifle</td>
+                                                    <td>Sutton in Ashfield</td>
                                                     <td width="8%">
                                                         <button type="button" class="btn btn-primary btn-sm">Edit</button>
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Garrett Winters</td>
-                                                    <td>Accountant</td>
+                                                    <td>The Maypole</td>
+                                                    <td>Sutton In Ashfield</td>
                                                     <td width="8%">
                                                         <button type="button" class="btn btn-primary btn-sm">Edit</button>
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td>Ashton Cox</td>
-                                                    <td>Junior Technical Author</td>
-                                                    <td width="8%">
-                                                        <button type="button" class="btn btn-primary btn-sm">Edit</button>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Cedric Kelly</td>
-                                                    <td>Senior Javascript Developer</td>
-                                                    <td width="8%">
-                                                        <button type="button" class="btn btn-primary btn-sm">Edit</button>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>Airi Satou</td>
-                                                    <td>Accountant</td>
+                                                    <td>The Fox & Crown</td>
+                                                    <td>Skegby</td>
                                                     <td width="8%">
                                                         <button type="button" class="btn btn-primary btn-sm">Edit</button>
                                                     </td>
