--- a/templates/Admin/admin_base.html.twig
+++ b/templates/Admin/admin_base.html.twig
@@ -20,13 +20,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ path('dashboard') }}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item pl-2">
-                <a class="nav-link" href="#">Add/Edit Team Members</a>
+                <a class="nav-link" href="{{ path('dashboard_team') }}">Add/Edit Team Members</a>
             </li>
             <li class="nav-item pl-2">
-                <a class="nav-link" href="#">Add/Edit Pubs</a>
+                <a class="nav-link" href="{{ path('dashboard_pubs') }}">Add/Edit Pubs</a>
             </li>
             <li class="nav-item pl-2">
                 <a class="nav-link" href="#">Add/Edit Jobs</a>
