wires in backend to jobs and apply form

--- a/templates/Pages/apply.html.twig
+++ b/templates/Pages/apply.html.twig
@@ -3,8 +3,8 @@
 {% block content %}
     <div class="container py-5">
         <div class="team-header text-center">
-            <h2 class="h1-responsive font-weight-bold text-center mt-2 mb-0">General Manager Application form</h2>
-            <h5 class="h5-responsive font-weight-bold text-center mb-3 mt-2">The Tavern - Sutton In Ashfield</h5>
+            <h2 class="h1-responsive font-weight-bold text-center mt-2 mb-0">{{ job.role }} Application form</h2>
+            <h5 class="h5-responsive font-weight-bold text-center mb-3 mt-2">{{ job.title }} - {{ job.town }}</h5>
             <p class="mb-4">All applications will be sent directly to our head office, we will be in touch via email shortly. </p>
         </div>
         <div class="col-lg-12">
